# ukraine_phone_formatter_py

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
tests/: test_formatter.py
ukraine_phone_formatter.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
